--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -2218,7 +2218,7 @@ html {
 body {
   position: relative;
   margin: 0;
-  padding-bottom: 1rem;
+  padding-bottom: 4rem;
   min-height: 100%; }
 
 footer.page-footer {
@@ -2230,7 +2230,7 @@ footer.page-footer {
   width: 100%;
   z-index: 9999; }
   footer.page-footer .footer-copyright {
-    height: 16px;
+    height: 60px;
     line-height: 16px;
     font-family: 'Lato-Regular';
     font-size: 10px;
@@ -4794,4 +4794,53 @@ input.borderbottom {
 .thead-custom-style.travel-blue{
   border-top: 1px solid #2d81af;
     box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.2), inset 0 1px 0 0 #2d81af;
+}
+
+/*Footer*/
+#browsers ul{
+  display: inline-flex;
+}
+#browsers ul li{
+  text-align: center;
+  padding: 0 15px;
+}
+#browsers ul li i{
+  font-size: 26px;
+  margin-bottom: 5px;
+}
+#browsers h6{
+  font-size: 12px;
+}
+.branding{
+  font-size: 14px;
+}
+@media only screen and (max-width: 768px){
+.branding {
+    text-align: center;
+  }
+  #browsers h6{
+  font-size: 10px;
+  }
+}
+@media only screen and (max-width: 425px){
+.branding {
+    text-align: center;
+  }
+  #browsers h6{
+  font-size: 6.5px;
+  }
+  #browsers ul li{
+  padding: 3px 5px;
+  }
+  #browsers ul li i{
+  font-size: 20px;
+  }
+  .branding{
+  font-size: 10px;
+  }
+}
+@media only screen and (max-width: 375px){
+  #browsers h6{
+  font-size: 5.5px;
+  }
 }
